# Marketplace-Intelligence-Platform

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CLAUDE2.md  ENDPOINTS.md  Final_Project_Proposal.docx  README.md  UI.html  app.py  architecture.md  bug_summary.md  dataforge_app.py  dataforge_components.html  dedup_demo.py  dedup_demo_steps.md  demo.py  docker-compose.uc2.yml  docker-compose.yml  eda_pipeline_run.py  fetch_s3_data.py  gcp_setup_commands.md  pyproject.toml  revised.md  run_report.md
.claude/: settings.local.json
.specify/: feature.json  init-options.json  integration.json  requiredlimits.yaml
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  codex.manifest.json  opencode.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
.streamlit/: config.toml
airflow/: Dockerfile  airflow.db
airflow/dags/: bronze_to_bq_dag.py  bronze_to_silver_dag.py  esci_dag.py  off_incremental_dag.py  openfda_incremental_dag.py  silver_to_gold_dag.py  uc2_anomaly_dag.py  uc2_chunker_dag.py  usda_dag.py  usda_incremental_dag.py
checkpoint/: checkpoint.db
config/: litellm_config.yaml  llm_rate_limits.yaml  prometheus.yml  unified_schema.json
config/schemas/: finance_schema.json  manufacturing_schema.json  nutrition_schema.json  pricing_schema.json  retail_schema.json  safety_schema.json
corpus/: corpus_summary.json
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DQ_SCORING.md  MIP_System_Guide.html  PROJECT_STATUS.md  TEST_COVERAGE_REPORT.md  bronze_eda.md  code_change.md  consolidates_tests.md  data_inventory.md  data_sources.md  eda_plan.md  plan.md  prof_instructions.md  revamp.md  run_report.md  tests_and_guardrails.md  uc2.md  usp.md
domain_packs/healthcare_test/: .audit.jsonl  block_sequence.yaml  enrichment_rules.yaml  prompt_examples.yaml
domain_packs/nutrition/: block_sequence.yaml  enrichment_rules.yaml  prompt_examples.yaml
domain_packs/pharma/: .audit.jsonl  block_sequence.yaml  enrichment_rules.yaml  prompt_examples.yaml
domain_packs/pricing/: block_sequence.yaml
domain_packs/retail_inventory/: block_sequence.yaml
domain_packs/safety/: block_sequence.yaml
final_project/: CLAUDE.md  plan.md  pyproject.toml  requirements.txt
final_project/kafka_full_arch/common/: config.py  file_utils.py  kafka_utils.py  metadata_store.py  snowflake_utils.py  state_store.py
final_project/kafka_full_arch/fda/: constants.py  record_utils.py  refresh_producer.py
final_project/kafka_full_arch/fda/consumer/: consume_raw.py
final_project/kafka_full_arch/fda/producer/: load_raw_to_kafka.py
final_project/kafka_full_arch/fda/scripts/: inspect_raw_file.py  seed_watermark_from_raw.py
final_project/kafka_full_arch/openfoodfacts/: constants.py  record_utils.py
final_project/kafka_full_arch/openfoodfacts/consumer/: consume_raw.py
final_project/kafka_full_arch/openfoodfacts/producer/: load_raw_to_kafka.py  stream_raw_to_kafka.py
final_project/kafka_full_arch/openfoodfacts/scripts/: inspect_raw_file.py  test_stream.py
final_project/kafka_full_arch/usda/: constants.py  record_utils.py  refresh_producer.py  state_store.py  test_api_connection.py
final_project/kafka_full_arch/usda/consumer/: consume_raw.py
final_project/kafka_full_arch/usda/producer/: load_raw_to_kafka.py
final_project/kafka_full_arch/usda/scripts/: inspect_raw_file.py  seed_watermark_from_raw.py
final_project/kafka_openfda_demo/: consumer_openfda.py  create_topic.sh  docker-compose.yml  producer_openfda.py
grafana/: docker-compose.yml  prometheus.yml
ops/off_s3_airflow/: .env.example  README.md  (+3 more)
scripts/: backfill_uc2_metrics.py  build_uc3_index.py  build_uc4.py  count_rows.py  create_bq_external_tables.py  eda_bronze_silver.py  eda_full_report.py  esci_bronze_to_gold.py  fix_off_gold_nutrition.py  gcp_test.py  load_usda_metadata_bq.py  register_connectors.sh  repush_uc2_metrics.py  run_bronze_to_silver.py  seed_anomaly_demo.py  seed_off_corpus.py  test_healthcare_domain.py  usda_bulk_download.sh
tests/: conftest.py  guardrails_lab_ref.ipynb  test_gcs_loader.py  unit_tests.py
(+332 files in other folders)
