[tool.poetry]
name = "etl-pipeline"
version = "0.1.0"
description = "Schema-driven self-extending ETL pipeline with two-agent architecture"
authors = ["aq"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2"
langchain = "^0.3"
langchain-core = "^0.3"
langchain-anthropic = "^0.3"
langgraph = "^0.4"
litellm = "^1.55"
python-dotenv = "^1.0"
rapidfuzz = "^3.9"
sentence-transformers = "^3.0"
faiss-cpu = "^1.8"
numpy = "^1.26"
streamlit = "^1.56.0"
tqdm = "^4.0"
pyyaml = "^6.0"
structlog = "^24.0"
boto3 = "^1.42.91"
gcloud = "^0.18.3"
google-cloud-storage = "^3.10.1"
google-cloud-bigquery = "^3.41.0"
db-dtypes = "^1.5.1"
redis = "^7.4.0"
chromadb = ">=0.6"
pyarrow = "^16.0"
rank-bm25 = "^0.2"
mlxtend = "^0.23"
networkx = "^3.3"
prometheus-client = "^0.25.0"
psycopg2-binary = "^2.9.12"
kafka = "^1.3.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
httpx = "^0.27"

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
markers = [
    "integration: requires real GCS credentials (deselect with '-m not integration')",
]
addopts = "--strict-markers"

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "src/uc3_search/*",
    "src/uc4_recommendations/*",
    "src/uc2_observability/dashboard.py",
    "src/uc2_observability/anomaly_detection.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false
precision = 1

[tool.coverage.html]
directory = "htmlcov"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
